--- a/app/templates/components/SubscribeForm.html.twig
+++ b/app/templates/components/SubscribeForm.html.twig
@@ -20,7 +20,7 @@
 
     
 
-    <button type="submit" style="margin-top: 10px;">
+    <button type="submit" {% if not this.canSubmit %}disabled{% endif %} style="margin-top:10px; {% if not this.canSubmit %}opacity:.5; cursor:not-allowed;{% endif %}">
         S’abonner
     </button>
 
