--- a/app/templates/emails/newsletter_description.html.twig
+++ b/app/templates/emails/newsletter_description.html.twig
@@ -236,7 +236,7 @@
 														<tr>
 															<td class="pad">
 																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:13px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:16px;">
-																	<p style="margin: 0;"><a href="https://www.example.com" target="_blank" style="text-decoration: underline; color: #535353;" rel="noopener">Unsuscribe</a></p>
+																	<p style="margin: 0;"><a href="http://localhost:8080/unsubscribe/{{ subscription.id }}" style="text-decoration: underline; color: #535353;" rel="noopener">Me désinscrire</a></p>
 																</div>
 															</td>
 														</tr>
