--- a/app/templates/components/SubscribeForm.html.twig
+++ b/app/templates/components/SubscribeForm.html.twig
@@ -8,19 +8,33 @@
     }) }}
 
     <div>
-        {{ form_row(form.email) }}
-        {{ form_row(form.birthDate) }}
+        <div class="form-group py-3">
+            <label for="{{ field_id(form.email) }}">Email</label>
+            <input type="email" class="form-control" id="{{ field_id(form.email) }}" placeholder="email@example.com" name="{{ field_name(form.email) }}" value="{{ field_value(form.email) }}">
+        </div>
+        <div class="form-group pt-3">
+            <label for="{{ field_id(form.birthDate) }}">Date de naissance</label>
+            <input type="date" class="form-control" id="{{ field_id(form.birthDate) }}" name="{{ field_name(form.birthDate) }}" value="{{ field_value(form.birthDate) }}">
+        </div>
+    
         {% if this.isAgeEligible is same as(false) %}
             <p style="color: #b00; margin-top: 8px;">
                 Désolé, il faut avoir au moins 16 ans.
             </p>
         {% endif %}
-        {{ form_row(form.newsletters) }}
+        
+        <div class="pt-3">
+            {{ form_row(form.newsletters) }}  
+        </div>   
     </div>
 
-    
+    {% if this.isSubmitted is same as(true) %}
+        <p style="padding:8px; background:#e7ffe7; border:1px solid #9f9; margin:10px 0;">
+            Vous êtes inscrit à la newsletter !
+        </p>
+    {% endif %}
 
-    <button type="submit" {% if not this.canSubmit %}disabled{% endif %} style="margin-top:10px; {% if not this.canSubmit %}opacity:.5; cursor:not-allowed;{% endif %}">
+    <button type="submit" class="annx-btn pt-3" {% if not this.canSubmit %}disabled{% endif %} style="margin-top:10px; {% if not this.canSubmit %}opacity:.5; cursor:not-allowed;{% endif %}">
         S’abonner
     </button>
 
