--- a/app/templates/components/SubscribeForm.html.twig
+++ b/app/templates/components/SubscribeForm.html.twig
@@ -16,19 +16,17 @@
             <label for="{{ field_id(form.birthDate) }}">Date de naissance</label>
             <input type="date" class="form-control" id="{{ field_id(form.birthDate) }}" name="{{ field_name(form.birthDate) }}" value="{{ field_value(form.birthDate) }}">
         </div>
-    
-        {% if this.isAgeEligible is same as(false) %}
-            <p style="color: #b00; margin-top: 8px;">
-                Désolé, il faut avoir au moins 16 ans.
-            </p>
-        {% endif %}
         
         <div class="pt-3">
             {{ form_row(form.newsletters) }}  
         </div>   
     </div>
 
-    {% if this.isSubmitted is same as(true) %}
+    {% if this.isSubmitted is same as(true) and this.isAgeEligible is same as(false) %}
+        <p style="padding:8px; background:#b00; border:1px solid rgb(255, 0, 0); margin:10px 0;">
+            Désolé, il faut avoir au moins 16 ans.
+        </p>
+    {% elseif this.isSubmitted is same as(true) %}
         <p style="padding:8px; background:#e7ffe7; border:1px solid #9f9; margin:10px 0;">
             Vous êtes inscrit à la newsletter !
         </p>
